# app.js
@@ -19,14 +19,14 @@ process.on("uncaughtException", (err, origin) => {
   );
 });
 
-const config = {
-  authRequired: false,
-  auth0Logout: true,
-  secret: process.env.SECRET,
-  baseURL: process.env.BASE_URL,
-  clientID: process.env.CLIENT_ID,
-  issuerBaseURL: process.env.ISSUER_BASE_URL,
-};
+// const config = {
+//   authRequired: false,
+//   auth0Logout: true,
+//   secret: process.env.SECRET,
+//   baseURL: process.env.BASE_URL,
+//   clientID: process.env.CLIENT_ID,
+//   issuerBaseURL: process.env.ISSUER_BASE_URL,
+// };
 
 
 //initalize database and start the server
@@ -42,11 +42,11 @@ mongodb.initializeDatabase((err) => {
 
 // app.use(auth(config));
 
-// app.get("/login", (req, res) => {
-//   res.redirect(
-//     `https://github.com/login/oauth/authorize?client_id=${process.env.clientID}`
-//   )
-// } )
+app.get("/login", (req, res) => {
+  res.redirect(
+    `https://github.com/login/oauth/authorize?client_id=${process.env.clientID}`
+  )
+} )
 
 // app.get('/', (req, res) => {
 //   res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
