# swagger.json
@@ -5,10 +5,10 @@
     "description": "finance API",
     "version": "1.0.0"
   },
-  "host": "cse341financeproject.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/api-docs": {
